2013-10-09  Dirk Schulze  <dschulze@adobe.com>
	Removed 'child' and select() function from the first level of Masking. The CSS WG
	is looking into a more general approach that can be used cross-specification.

2013-09-13  Dirk Schulze  <dschulze@adobe.com>
	Put child and child-selector values at risk.

2013-09-13  Dirk Schulze  <dschulze@adobe.com>
	Deferred multiple layers to the next level.
	'mask' resets 'mask-box-image' properties.
	Initial values for 'mask-repeat', 'mask-position' and 'mask-origin'
	changed to ''no-repeat'', ''center'' and ''border-box''.
	Added security model for pixel operations and fetching of masking
	and clipping resources.

2013-06-29  Dirk Schulze  <dschulze@adobe.com>
	Corrected initial value of 'clip' to 'auto'.

2013-06-20  Dirk Schulze  <dschulze@adobe.com>
	Reference CSS Shapes module instead of CSS Exclusions.

2013-05-30  Dirk Schulze  <dschulze@adobe.com>
	Remove issue about 'mask: none' as suggested on www-style.

2013-05-30  Dirk Schulze  <dschulze@adobe.com>
	Prepare document for publication.

2013-05-30  Dirk Schulze  <dschulze@adobe.com>
	Add link to test suite.

2013-05-29  Dirk Schulze  <dschulze@adobe.com>
	Add note and issue that 'mask: none' does not influence 'mask-box-image'.

2013-05-22  Dirk Schulze  <dschulze@adobe.com>
	Clarify interaction with Visual Effects module from CSS 2.1.
	Restrict masks and clipping paths not to apply to defs elements.
	Add issue to fix security model.

2013-04-05  Dirk Schulze  <dschulze@adobe.com>
	Clarify when a stacking context gets created.

2013-04-05  Dirk Schulze  <dschulze@adobe.com>
	Clarify the difference of 'mask-type' and 'mask-source-type'. Added an example.

2013-04-05  Dirk Schulze  <dschulze@adobe.com>
	Remove <clip-box>; use [ <box> | no-clip ] instead.

2013-04-05  Dirk Schulze  <dschulze@adobe.com>
	Update presentation attribute style with property style.

2013-04-05  Dirk Schulze  <dschulze@adobe.com>
	Experimental change of style of element names.
