@@ -253,7 +253,7 @@ Initial: no-repeat
 Applies to: All elements. In SVG, it applies to <a>container elements</a> without the <a>'defs'</a> element and all <a>graphics elements</a>
 Inherited: no
 Percentages: n/a
-Computed value: A list, each item consisting of: two keywords, one per dimension
+Computed value: Consists of: two keywords, one per dimension
 Media: visual
 Animatable: no
 </pre>
@@ -289,10 +289,10 @@ Value: <<position>>
 Initial: center
 Applies to: All elements. In SVG, it applies to <a>container elements</a> without the <a>'defs'</a> element and all <a>graphics elements</a>
 Inherited: no
-Percentages: refer to size of <i>mask painting area</i> <em>minus</em> size of mask image; see text
-Computed value: A list, each item consisting of: two keywords representing the origin and two offsets from that origin, each given as an absolute length (if given a <<length>>), otherwise as a percentage.
+Percentages: refer to size of <i>mask painting area</i> <em>minus</em> size of mask image; see text 'background-position' [[!CSS3BG]]
+Computed value: Consisting of: two keywords representing the origin and two offsets from that origin, each given as an absolute length (if given a <<length>>), otherwise as a percentage.
 Media: visual
-Animatable: as <a href="http://dev.w3.org/csswg/css3-transitions/#animtype-repeatable-list">repeatable list</a> of <a href="http://dev.w3.org/csswg/css3-transitions/#animtype-simple-list">simple list</a> of <a href="http://dev.w3.org/csswg/css3-transitions/#animtype-lpcalc">length, percentage, or calc
+Animatable: as <a href="http://dev.w3.org/csswg/css3-transitions/#animtype-simple-list">simple list</a> of <a href="http://dev.w3.org/csswg/css3-transitions/#animtype-lpcalc">length, percentage, or calc
 </pre>
 
 See the 'background-position' property [[!CSS3BG]] for the definitions of the property values.
@@ -392,7 +392,7 @@ Inherited: no
 Percentages: n/a
 Computed value: as specified, but with lengths made absolute
 Media: visual
-Animatable: as <a href="http://dev.w3.org/csswg/css3-transitions/#animtype-repeatable-list">repeatable list</a> of <a href="http://dev.w3.org/csswg/css3-transitions/#animtype-simple-list">simple list</a> of <a href="http://dev.w3.org/csswg/css3-transitions/#animtype-lpcalc">length, percentage, or calc</a> (<span class="note">This means keyword values are not animatable.
+Animatable: as <a href="http://dev.w3.org/csswg/css3-transitions/#animtype-simple-list">simple list</a> of <a href="http://dev.w3.org/csswg/css3-transitions/#animtype-lpcalc">length, percentage, or calc</a> (<span class="note">This means keyword values are not animatable.</span>)
 </pre>
 
 Specifies the size of the mask images.
@@ -1125,6 +1125,15 @@ Corresponds to attribute <a>'mask/height'</a> on the given
 </dl>
 
 <h2 class="no-num" id="changes">Changes since last publication</h2>
+
+The following changes were made since the <a href="http://www.w3.org/TR/2013/WD-css-masking-1-20131029/">29 October 2013 Last Call Working Draft</a>.
+
+<ul>
+<li>"Animatable" section of 'mask-size', 'mask-position' described as repeatable list of lists. Changed to a single list.</li>
+<li>Computed value of 'mask-repeat' and 'mask-position' was described as list of items. Changed to have just one value.</li>
+<li>Change link to ED from <a href='http://dev.w3.org/fxtf/masking/'>http://dev.w3.org/fxtf/masking/</a> to <a href='http://dev.w3.org/fxtf/css-masking-1/'>http://dev.w3.org/fxtf/css-masking-1/</a></li>
+</ul>
+
 
 The following significant changes were made since the <a href="http://www.w3.org/TR/2013/WD-css-masking-20130620/">20 June 2013 Working Draft</a>.
 
