@@ -277,7 +277,7 @@ div { mask-image: url(resources.svg#mask2) }
 
 <h3 class="heading settled heading" data-level=5.3 id=the-mask-repeat><span class=secno>5.3 </span><span class=content>The <a class=property data-link-type=propdesc href=#propdef-mask-repeat title=mask-repeat>mask-repeat</a> property</span><a class=self-link href=#the-mask-repeat></a></h3>
 
-<table class=propdef><tr><th>Name:<td><dfn class=css-code data-dfn-type=property data-export="" id=propdef-mask-repeat>mask-repeat<a class=self-link href=#propdef-mask-repeat></a></dfn><tr><th>Value:<td><a class="production css-code" data-link-type=type href=http://dev.w3.org/csswg/css-backgrounds-4/#repeat-style title="<repeat-style>">&lt;repeat-style&gt;</a><tr><th>Initial:<td>no-repeat<tr><th>Applies to:<td>All elements. In SVG, it applies to <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermContainerElement>container elements</a> without the <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/struct.html#DefsElement><code class=element-name>&lt;defs&gt;</code></a> element and all <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermGraphicsElement>graphics elements</a><tr><th>Inherited:<td>no<tr><th>Media:<td>visual<tr><th>Computed value:<td>A list, each item consisting of: two keywords, one per dimension<tr><th>Percentages:<td>n/a<tr><th>Animatable:<td>no</table>
+<table class=propdef><tr><th>Name:<td><dfn class=css-code data-dfn-type=property data-export="" id=propdef-mask-repeat>mask-repeat<a class=self-link href=#propdef-mask-repeat></a></dfn><tr><th>Value:<td><a class="production css-code" data-link-type=type href=http://dev.w3.org/csswg/css-backgrounds-4/#repeat-style title="<repeat-style>">&lt;repeat-style&gt;</a><tr><th>Initial:<td>no-repeat<tr><th>Applies to:<td>All elements. In SVG, it applies to <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermContainerElement>container elements</a> without the <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/struct.html#DefsElement><code class=element-name>&lt;defs&gt;</code></a> element and all <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermGraphicsElement>graphics elements</a><tr><th>Inherited:<td>no<tr><th>Media:<td>visual<tr><th>Computed value:<td>Consists of: two keywords, one per dimension<tr><th>Percentages:<td>n/a<tr><th>Animatable:<td>no</table>
 <p>Specifies how mask images are tiled after they have been <a href=#the-mask-size>sized</a> and <a href=#the-mask-position>positioned</a>.
 
 <p>See <a class=property data-link-type=propdesc href=http://dev.w3.org/csswg/css-backgrounds-4/#background-repeat title=background-repeat>background-repeat</a> property <a data-biblio-type=normative data-link-type=biblio href=#css3bg title=css3bg>[CSS3BG]</a> for the definitions of the property values.
@@ -301,7 +301,7 @@ mask-repeat: space;
 
 <h3 class="heading settled heading" data-level=5.4 id=the-mask-position><span class=secno>5.4 </span><span class=content>The <a class=property data-link-type=propdesc href=#propdef-mask-position title=mask-position>mask-position</a> property</span><a class=self-link href=#the-mask-position></a></h3>
 
-<table class=propdef><tr><th>Name:<td><dfn class=css-code data-dfn-type=property data-export="" id=propdef-mask-position>mask-position<a class=self-link href=#propdef-mask-position></a></dfn><tr><th>Value:<td><a class="production css-code" data-link-type=type href=http://dev.w3.org/csswg/css-backgrounds-3/#position title="<position>">&lt;position&gt;</a><tr><th>Initial:<td>center<tr><th>Applies to:<td>All elements. In SVG, it applies to <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermContainerElement>container elements</a> without the <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/struct.html#DefsElement><code class=element-name>&lt;defs&gt;</code></a> element and all <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermGraphicsElement>graphics elements</a><tr><th>Inherited:<td>no<tr><th>Media:<td>visual<tr><th>Computed value:<td>A list, each item consisting of: two keywords representing the origin and two offsets from that origin, each given as an absolute length (if given a <a class="production css-code" data-link-type=type href=http://dev.w3.org/csswg/css-values-3/#length-value title="<length>">&lt;length&gt;</a>), otherwise as a percentage.<tr><th>Percentages:<td>refer to size of <a data-link-type=dfn href=#mask-painting-area title="mask painting area">mask painting area</a> <em>minus</em> size of mask image; see text<tr><th>Animatable:<td>as <a href=http://dev.w3.org/csswg/css3-transitions/#animtype-repeatable-list>repeatable list</a> of <a href=http://dev.w3.org/csswg/css3-transitions/#animtype-simple-list>simple list</a> of <a href=http://dev.w3.org/csswg/css3-transitions/#animtype-lpcalc>length, percentage, or calc</a></table>
+<table class=propdef><tr><th>Name:<td><dfn class=css-code data-dfn-type=property data-export="" id=propdef-mask-position>mask-position<a class=self-link href=#propdef-mask-position></a></dfn><tr><th>Value:<td><a class="production css-code" data-link-type=type href=http://dev.w3.org/csswg/css-backgrounds-3/#position title="<position>">&lt;position&gt;</a><tr><th>Initial:<td>center<tr><th>Applies to:<td>All elements. In SVG, it applies to <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermContainerElement>container elements</a> without the <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/struct.html#DefsElement><code class=element-name>&lt;defs&gt;</code></a> element and all <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermGraphicsElement>graphics elements</a><tr><th>Inherited:<td>no<tr><th>Media:<td>visual<tr><th>Computed value:<td>Consisting of: two keywords representing the origin and two offsets from that origin, each given as an absolute length (if given a <a class="production css-code" data-link-type=type href=http://dev.w3.org/csswg/css-values-3/#length-value title="<length>">&lt;length&gt;</a>), otherwise as a percentage.<tr><th>Percentages:<td>refer to size of <a data-link-type=dfn href=#mask-painting-area title="mask painting area">mask painting area</a> <em>minus</em> size of mask image; see text <a class=property data-link-type=propdesc href=http://dev.w3.org/csswg/css-backgrounds-4/#background-position title=background-position>background-position</a> <a data-biblio-type=normative data-link-type=biblio href=#css3bg title=css3bg>[CSS3BG]</a><tr><th>Animatable:<td>as <a href=http://dev.w3.org/csswg/css3-transitions/#animtype-simple-list>simple list</a> of <a href=http://dev.w3.org/csswg/css3-transitions/#animtype-lpcalc>length, percentage, or calc</a></table>
 <p>See the <a class=property data-link-type=propdesc href=http://dev.w3.org/csswg/css-backgrounds-4/#background-position title=background-position>background-position</a> property <a data-biblio-type=normative data-link-type=biblio href=#css3bg title=css3bg>[CSS3BG]</a> for the definitions of the property values.
 
 <div class=example>
@@ -365,7 +365,7 @@ mask-repeat: no-repeat;
 
 <h3 class="heading settled heading" data-level=5.7 id=the-mask-size><span class=secno>5.7 </span><span class=content>The <a class=property data-link-type=propdesc href=#propdef-mask-size title=mask-size>mask-size</a> property</span><a class=self-link href=#the-mask-size></a></h3>
 
-<table class=propdef><tr><th>Name:<td><dfn class=css-code data-dfn-type=property data-export="" id=propdef-mask-size>mask-size<a class=self-link href=#propdef-mask-size></a></dfn><tr><th>Value:<td><a class="production css-code" data-link-type=type href=http://dev.w3.org/csswg/css-backgrounds-4/#bg-size title="<bg-size>">&lt;bg-size&gt;</a><tr><th>Initial:<td>border-box<tr><th>Applies to:<td>All elements. In SVG, it applies to <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermContainerElement>container elements</a> without the <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/struct.html#DefsElement><code class=element-name>&lt;defs&gt;</code></a> element and all <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermGraphicsElement>graphics elements</a><tr><th>Inherited:<td>no<tr><th>Media:<td>visual<tr><th>Computed value:<td>as specified, but with lengths made absolute<tr><th>Percentages:<td>n/a<tr><th>Animatable:<td>as <a href=http://dev.w3.org/csswg/css3-transitions/#animtype-repeatable-list>repeatable list</a> of <a href=http://dev.w3.org/csswg/css3-transitions/#animtype-simple-list>simple list</a> of <a href=http://dev.w3.org/csswg/css3-transitions/#animtype-lpcalc>length, percentage, or calc</a> (<span class=note>This means keyword values are not animatable.</span></table>
+<table class=propdef><tr><th>Name:<td><dfn class=css-code data-dfn-type=property data-export="" id=propdef-mask-size>mask-size<a class=self-link href=#propdef-mask-size></a></dfn><tr><th>Value:<td><a class="production css-code" data-link-type=type href=http://dev.w3.org/csswg/css-backgrounds-4/#bg-size title="<bg-size>">&lt;bg-size&gt;</a><tr><th>Initial:<td>border-box<tr><th>Applies to:<td>All elements. In SVG, it applies to <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermContainerElement>container elements</a> without the <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/struct.html#DefsElement><code class=element-name>&lt;defs&gt;</code></a> element and all <a href=http://www.w3.org/TR/2011/REC-SVG11-20110816/intro.html#TermGraphicsElement>graphics elements</a><tr><th>Inherited:<td>no<tr><th>Media:<td>visual<tr><th>Computed value:<td>as specified, but with lengths made absolute<tr><th>Percentages:<td>n/a<tr><th>Animatable:<td>as <a href=http://dev.w3.org/csswg/css3-transitions/#animtype-simple-list>simple list</a> of <a href=http://dev.w3.org/csswg/css3-transitions/#animtype-lpcalc>length, percentage, or calc</a> (<span class=note>This means keyword values are not animatable.</span>)</table>
 <p>Specifies the size of the mask images.
 
 <p>See <a class=property data-link-type=propdesc href=http://dev.w3.org/csswg/css-backgrounds-4/#background-size title=background-size>background-size</a> property <a data-biblio-type=normative data-link-type=biblio href=#css3bg title=css3bg>[CSS3BG]</a> for the definitions of the property values.
@@ -997,6 +997,15 @@ Corresponds to attribute <a class=attr-name data-link-type=maybe href=http://dev
 
 <h2 class="no-num heading settled heading" id=changes><span class=content>Changes since last publication</span><a class=self-link href=#changes></a></h2>
 
+<p>The following changes were made since the <a href=http://www.w3.org/TR/2013/WD-css-masking-1-20131029/>29 October 2013 Last Call Working Draft</a>.
+
+<p><ul>
+<li>"Animatable" section of <a class=property data-link-type=propdesc href=#propdef-mask-size title=mask-size>mask-size</a>, <a class=property data-link-type=propdesc href=#propdef-mask-position title=mask-position>mask-position</a> described as repeatable list of lists. Changed to a single list.</li>
+<li>Computed value of <a class=property data-link-type=propdesc href=#propdef-mask-repeat title=mask-repeat>mask-repeat</a> and <a class=property data-link-type=propdesc href=#propdef-mask-position title=mask-position>mask-position</a> was described as list of items. Changed to have just one value.</li>
+<li>Change link to ED from <a href=http://dev.w3.org/fxtf/masking/>http://dev.w3.org/fxtf/masking/</a> to <a href=http://dev.w3.org/fxtf/css-masking-1/>http://dev.w3.org/fxtf/css-masking-1/</a></li>
+</ul>
+
+
 <p>The following significant changes were made since the <a href=http://www.w3.org/TR/2013/WD-css-masking-20130620/>20 June 2013 Working Draft</a>.
 
 <p><ul>
@@ -1223,11 +1232,11 @@ Property index</span><a class=self-link href=#property-index></a></h2>
 <div data-fill-with=property-index><table class=proptable><thead><tr><th scope=col>Name<th scope=col>Value<th scope=col>Initial<th scope=col>Applies to<th scope=col>Inh.<th scope=col>%ages<th scope=col>Media<th scope=col>Animatable<th scope=col>Computed value<tbody>
 <tr><th scope=row><a data-property="">mask-image</a><td>&lt;mask-reference&gt;<td>none<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>n/a<td>visual<td>no<td>as specified, but with URIs made absolute
 <tr><th scope=row><a data-property="">mask-source-type</a><td>&lt;source-type&gt;`<td>auto<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>n/a<td>visual<td>no<td>as specified
-<tr><th scope=row><a data-property="">mask-repeat</a><td>&lt;repeat-style&gt;<td>no-repeat<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>n/a<td>visual<td>no<td>A list, each item consisting of: two keywords, one per dimension
-<tr><th scope=row><a data-property="">mask-position</a><td>&lt;position&gt;<td>center<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>refer to size of mask painting area minus size of mask image; see text<td>visual<td>as repeatable list of simple list of length, percentage, or calc<td>A list, each item consisting of: two keywords representing the origin and two offsets from that origin, each given as an absolute length (if given a &lt;length&gt;), otherwise as a percentage.
+<tr><th scope=row><a data-property="">mask-repeat</a><td>&lt;repeat-style&gt;<td>no-repeat<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>n/a<td>visual<td>no<td>Consists of: two keywords, one per dimension
+<tr><th scope=row><a data-property="">mask-position</a><td>&lt;position&gt;<td>center<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>refer to size of mask painting area minus size of mask image; see text background-position [CSS3BG]<td>visual<td>as simple list of length, percentage, or calc<td>Consisting of: two keywords representing the origin and two offsets from that origin, each given as an absolute length (if given a &lt;length&gt;), otherwise as a percentage.
 <tr><th scope=row><a data-property="">mask-clip</a><td>&lt;box&gt; | no-clip<td>border-box<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>n/a<td>visual<td>no<td>as specified
 <tr><th scope=row><a data-property="">mask-origin</a><td>&lt;box&gt;<td>border-box<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>n/a<td>visual<td>no<td>as specified
-<tr><th scope=row><a data-property="">mask-size</a><td>&lt;bg-size&gt;<td>border-box<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>n/a<td>visual<td>as repeatable list of simple list of length, percentage, or calc (This means keyword values are not animatable.<td>as specified, but with lengths made absolute
+<tr><th scope=row><a data-property="">mask-size</a><td>&lt;bg-size&gt;<td>border-box<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>n/a<td>visual<td>as simple list of length, percentage, or calc (This means keyword values are not animatable.)<td>as specified, but with lengths made absolute
 <tr><th scope=row><a data-property="">mask</a><td>&lt;mask-layer&gt;<td>border-box<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>see individual properties<td>visual<td>see individual properties<td>see individual properties
 <tr><th scope=row><a data-property="">mask-type</a><td>luminance | alpha<td>luminance<td>&lt;mask&gt; elements<td>no<td>n/a<td>visual<td>no<td>as specified
 <tr><th scope=row><a data-property="">mask-box-image-source</a><td>none | &lt;image&gt;<td>none<td>All elements. In SVG, it applies to container elements without the &lt;defs&gt; element and all graphics elements<td>no<td>n/a<td>visual<td>no<td>none or the image with its URI made absolute
