@@ -1,3 +1,11 @@
+2013-11-02  Dirk Schulze  <dschulze@adobe.com>
+	"Animatable" section of 'mask-size', 'mask-position' described
+	as repeatable list of lists. Changed to a single list.
+	Computed value of 'mask-repeat' and 'mask-position' was described
+	as list of items. Changed to have just one value.
+	Change link to ED from http://dev.w3.org/fxtf/masking/ to
+	http://dev.w3.org/fxtf/css-masking-1/
+
 2013-10-09  Dirk Schulze  <dschulze@adobe.com>
 	Removed 'child' and select() function from the first level of Masking. The CSS WG
 	is looking into a more general approach that can be used cross-specification.
